crates/wx-compiler/src/snapshots/wx_compiler__tir__tests__parse_simple_addition.snap
---
source: crates/wx-compiler/src/tir.rs
expression: case.tir
---
file_id: 1
type_pool:
  - Error
  - Unit
  - Never
  - Unknown
  - I32
  - I64
  - F32
  - F64
  - U32
  - U64
  - Bool
  - Char
  - Struct:
      struct_index: 0
  - U8
  - I8
  - U16
  - I16
  - Slice:
      of: 13
      mutable: false
  - Function:
      items:
        - 11
        - 11
      params_count: 1
  - Function:
      items:
        - 4
        - 4
        - 4
      params_count: 2
defined_functions:
  0:
    name:
      inner: 8
      span:
        start: 111
        end: 129
    params:
      - mut_span: ~
        name:
          inner: 9
          span:
            start: 130
            end: 134
        ty:
          inner: 11
          span:
            start: 130
            end: 134
    result_span:
      start: 139
      end: 143
    signature_index: 18
    stack:
      scopes:
        - kind: Block
          label: ~
          parent: ~
          locals:
            - name:
                inner: 9
                span:
                  start: 130
                  end: 134
              ty: 11
              mut_span: ~
              accesses:
                - span:
                    start: 153
                    end: 157
                  kind: Read
                - span:
                    start: 168
                    end: 172
                  kind: Read
                - span:
                    start: 190
                    end: 194
                  kind: Read
                - span:
                    start: 248
                    end: 252
                  kind: Read
          inferred_type: 11
          expected_type: 11
        - kind: Block
          label: ~
          parent: 0
          locals: []
          inferred_type: 11
          expected_type: 11
        - kind: Block
          label: ~
          parent: 0
          locals: []
          inferred_type: 11
          expected_type: 11
    block:
      kind:
        Block:
          scope_index: 0
          expressions: []
          result:
            kind:
              IfElse:
                condition:
                  kind:
                    Binary:
                      operator:
                        inner: And
                        span:
                          start: 165
                          end: 167
                      left:
                        kind:
                          Binary:
                            operator:
                              inner: GreaterEq
                              span:
                                start: 158
                                end: 160
                            left:
                              kind:
                                Local:
                                  scope_index: 0
                                  local_index: 0
                              ty: 11
                              span:
                                start: 153
                                end: 157
                            right:
                              kind:
                                Char:
                                  value: a
                              ty: 11
                              span:
                                start: 161
                                end: 164
                        ty: 10
                        span:
                          start: 153
                          end: 164
                      right:
                        kind:
                          Binary:
                            operator:
                              inner: LessEq
                              span:
                                start: 173
                                end: 175
                            left:
                              kind:
                                Local:
                                  scope_index: 0
                                  local_index: 0
                              ty: 11
                              span:
                                start: 168
                                end: 172
                            right:
                              kind:
                                Char:
                                  value: z
                              ty: 11
                              span:
                                start: 176
                                end: 179
                        ty: 10
                        span:
                          start: 168
                          end: 179
                  ty: 10
                  span:
                    start: 153
                    end: 179
                then_block:
                  kind:
                    Block:
                      scope_index: 1
                      expressions: []
                      result:
                        kind:
                          Binary:
                            operator:
                              inner: BitXor
                              span:
                                start: 202
                                end: 203
                            left:
                              kind:
                                Local:
                                  scope_index: 0
                                  local_index: 0
                              ty: 13
                              span:
                                start: 190
                                end: 194
                            right:
                              kind:
                                Int:
                                  value: 32
                              ty: 13
                              span:
                                start: 204
                                end: 219
                        ty: 11
                        span:
                          start: 189
                          end: 219
                  ty: 11
                  span:
                    start: 180
                    end: 234
                else_block:
                  kind:
                    Block:
                      scope_index: 2
                      expressions: []
                      result:
                        kind:
                          Local:
                            scope_index: 0
                            local_index: 0
                        ty: 11
                        span:
                          start: 248
                          end: 252
                  ty: 11
                  span:
                    start: 240
                    end: 258
            ty: 11
            span:
              start: 150
              end: 258
      ty: 11
      span:
        start: 144
        end: 262
  1:
    name:
      inner: 12
      span:
        start: 3
        end: 6
    params:
      - mut_span: ~
        name:
          inner: 13
          span:
            start: 7
            end: 8
        ty:
          inner: 4
          span:
            start: 10
            end: 13
      - mut_span: ~
        name:
          inner: 15
          span:
            start: 15
            end: 16
        ty:
          inner: 4
          span:
            start: 18
            end: 21
    result_span:
      start: 26
      end: 29
    signature_index: 19
    stack:
      scopes:
        - kind: Block
          label: ~
          parent: ~
          locals:
            - name:
                inner: 13
                span:
                  start: 7
                  end: 8
              ty: 4
              mut_span: ~
              accesses:
                - span:
                    start: 32
                    end: 33
                  kind: Read
            - name:
                inner: 15
                span:
                  start: 15
                  end: 16
              ty: 4
              mut_span: ~
              accesses:
                - span:
                    start: 36
                    end: 37
                  kind: Read
          inferred_type: 4
          expected_type: 4
    block:
      kind:
        Block:
          scope_index: 0
          expressions: []
          result:
            kind:
              Binary:
                operator:
                  inner: Add
                  span:
                    start: 34
                    end: 35
                left:
                  kind:
                    Local:
                      scope_index: 0
                      local_index: 0
                  ty: 4
                  span:
                    start: 32
                    end: 33
                right:
                  kind:
                    Local:
                      scope_index: 0
                      local_index: 1
                  ty: 4
                  span:
                    start: 36
                    end: 37
            ty: 4
            span:
              start: 32
              end: 37
      ty: 4
      span:
        start: 30
        end: 39
defined_globals: {}
namespaces: []
exports:
  - Function:
      internal_name:
        inner: 12
        span:
          start: 50
          end: 53
      external_name: ~
      func_index: 1
  - Function:
      internal_name:
        inner: 12
        span:
          start: 55
          end: 58
      external_name:
        inner: 21
        span:
          start: 62
          end: 68
      func_index: 1
declared_functions:
  - source: Defined
    signature_index: 18
    name:
      inner: 8
      span:
        start: 111
        end: 129
    params:
      - name:
          inner: 9
          span:
            start: 130
            end: 134
        ty:
          inner: 11
          span:
            start: 130
            end: 134
    result:
      inner: 11
      span:
        start: 139
        end: 143
    accesses: []
    pub_span:
      start: 108
      end: 110
  - source: Defined
    signature_index: 19
    name:
      inner: 12
      span:
        start: 3
        end: 6
    params:
      - name:
          inner: 13
          span:
            start: 7
            end: 8
        ty:
          inner: 4
          span:
            start: 10
            end: 13
      - name:
          inner: 15
          span:
            start: 15
            end: 16
        ty:
          inner: 4
          span:
            start: 18
            end: 21
    result:
      inner: 4
      span:
        start: 26
        end: 29
    accesses:
      - start: 50
        end: 53
      - start: 55
        end: 58
    pub_span: ~
declared_globals: []
diagnostics: []
structs:
  - name:
      inner: 1
      span:
        start: 11
        end: 17
    fields:
      - name:
          inner: 2
          span:
            start: 22
            end: 25
        ty:
          inner: 17
          span:
            start: 27
            end: 31
      - name:
          inner: 4
          span:
            start: 35
            end: 38
        ty:
          inner: 8
          span:
            start: 40
            end: 43
    lookup:
      2: 0
      4: 1
impl_members:
  11:
    8:
      Method: 0
